# serial-plotter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.ci/: build.py
.github/workflows/: main.yml
cmake/: config.h.in
include/asp/: application.h  options.h  types.h
include/asp/inputs/: data.h  serial.h
include/asp/render/: backend.h  frontend.h  gles2.h  gles3.h  opengl2.h  opengl3.h
include/asp/render/detail/: imgui_impl_sdl_es2.h  imgui_impl_sdl_es3.h
include/asp/ui/: drawable.h  logs.h  std_input_text.h  window.h
src/: application.cpp  main.cpp  options.cpp
src/inputs/: data.cpp  serial.cpp
src/render/: backend.cpp  frontend.cpp  gles2.cpp  gles3.cpp  opengl2.cpp  opengl3.cpp
src/render/detail/: imgui_impl_sdl_es2.cpp  imgui_impl_sdl_es3.cpp
src/ui/: logs.cpp  std_input_text.cpp  window.cpp
